# schemas/openings.go
@@ -1,8 +1,6 @@
 package schemas
 
 import (
-	"time"
-
 	"gorm.io/gorm"
 )
 
@@ -15,16 +13,4 @@ type Opening struct {
 	Remote   bool
 	Link     string
 	Salary   int64
-}
-
-type OpeningResponse struct {
-	Id        uint      `json:"id"`
-	Role      string    `json:"role"`
-	Company   string    `json:"company"`
-	Location  string    `json:"location"`
-	Remote    bool      `json:"remote"`
-	Link      string    `json:"link"`
-	Salary    int64     `json:"salary"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
 }
